kubernetes/k3s-prod/apps/tplink-omada/deployment.yaml
# this example runs in a rootless configuration

apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      securityContext:
        runAsUser: 508
        runAsGroup: 508
        runAsNonRoot: true
        fsGroup: 508
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: omada-controller
          image: mbentley/omada-controller:5.15
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          volumeMounts:
            - name: omada-data
              mountPath: /opt/tplink/EAPController/data
            - name: omada-logs
              mountPath: /opt/tplink/EAPController/logs
      volumes:
        - name: omada-data
          persistentVolumeClaim:
            claimName: omada-data-pvc
        - name: omada-logs
          persistentVolumeClaim:
            claimName: omada-logs-pvc
      restartPolicy: Always
