kubernetes/k3s-prod/apps/tplink-omada/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-ingress
  labels:
    app.kubernetes.io/name: omada-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - omada.70ld.dev
      secretName: omada-tls
  rules:
    - host: omada.70ld.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: omada-svc
                port:
                  number: 8043
